--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,19 @@ article {
     padding: 2rem;
     height: 40vh;
     overflow: auto;
-    animation: slideDown 0.3s ease 1 both;
+    animation: slideDown 0.4s ease 1 both;
+}
+section article:nth-child(1) {
+    animation-delay:0.3s;
+}
+section article:nth-child(2) {
+    animation-delay: 0.6s;
+}
+section article:nth-child(3) {
+    animation-delay: 0.9s;
+}
+section article:nth-child(4) {
+    animation-delay: 1.2s;
 }
 
 @keyframes slideDown {
