--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,14 @@ body {
 }
 section {
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+}
+@media only screen and (max-width: 1300px) {
+    section {
+        flex-direction: column;
+    }
 }
 article {
     margin: 1rem;
